fix overflow content

--- a/themes/bs_report_theme/public/css/main.css
+++ b/themes/bs_report_theme/public/css/main.css
@@ -649,7 +649,8 @@ form button {
   .report__content:nth-child(2n) {
     background: #F8F8F8; }
   .report__content-content {
-    padding: 0 0 100px 0; }
+    padding: 0 0 100px 0;
+    overflow: hidden; }
     .report__content-content h5 {
       color: #FC3938; }
   .report__content h2::after {
