--- a/themes/bs_report_theme/sass/report.scss
+++ b/themes/bs_report_theme/sass/report.scss
@@ -87,6 +87,7 @@
 
     &-content {
       padding: 0 0 100px 0;
+      overflow: hidden;
 
       h5 {
         color: $red_orange;
